Project1/force-app/main/default/objects/Mail__c/fields/Delivery_status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_status__c</fullName>
    <label>Delivery status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>On Vehicle for Delivery/Out for Delivery</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>