Project1/force-app/main/default/objects/Mail__c/fields/Insurance_Payout__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Payout__c</fullName>
    <inlineHelpText>If package has insurance and goes missing</inlineHelpText>
    <label>Insurance Payout</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>