Project1/force-app/main/default/objects/Mail__c/fields/Mail_Type__c.field-meta.xml
<CustomField>
    <fullName>Mail_Type__c</fullName>
    <label>Mail Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priority Mail Express</fullName>
            </value>
            <value>
                <fullName>Priority Mail</fullName>
            </value>
            <value>
                <fullName>First-Class Mail</fullName>
            </value>
            <value>
                <fullName>Periodicals</fullName>
            </value>
            <value>
                <fullName>Packages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>