Project1/force-app/main/default/objects/Mail__c/recordTypes/Custom_Mail.recordType-meta.xml
<RecordType>
    <fullName>Custom_Mail</fullName>
    <active>true</active>
    <label>Custom Mail</label>
</RecordType>